i fixed an alignment issue

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -195,7 +195,7 @@ header
     z-index: 99
     bottom: 0
     border: 0.2rem solid var.$PRODUCT-BG
-    background-color: var.$BG-COLOR
+    background-color: whitesmoke
 
     .order-highlight
         background-color: var.$PRODUCT-BG
@@ -381,7 +381,7 @@ main
                 margin-bottom: -2rem
     .order-confirmed
         height: fit-content
-        position: absolute
+        position: f
         top: 50%
         padding: 3rem
         left: 50%
